--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -83,7 +83,7 @@ An ordered ring $O$ is a ring $R$ with a subset $O^+ \subset R$ satisfying the f
     Given $a, b \in R$, if $a+b = a$ then $b=0$. 
 \end{theorem}
 \begin{proof}
-    Given any such $a$ and $b$, by $\ref{add-inverses}$ there exists $(a)$ such that $a + (-a) = 0$. Then, we have $(-a) + (a+b) = (-a) + a$. \ref{assoc-add} gives $( (-a) + a) + b = (-a) + a$. Then, \ref{commu-add} gives $(-a) + a = a + (-a) = 0$, and substituting gives $0 + b = 0$. Then, $0 + b = b+0 = b$ by \ref{commu-add} and \ref{add-identity}, so we have $b=0$ by substitution, completing the proof. 
+    Given any such $a$ and $b$, by \ref{add-inverses} there exists $(a)$ such that $a + (-a) = 0$. Then, we have $(-a) + (a+b) = (-a) + a$. \ref{assoc-add} gives $( (-a) + a) + b = (-a) + a$. Then, \ref{commu-add} gives $(-a) + a = a + (-a) = 0$, and substituting gives $0 + b = 0$. Then, $0 + b = b+0 = b$ by \ref{commu-add} and \ref{add-identity}, so we have $b=0$ by substitution, completing the proof. 
 \end{proof}
 
 \begin{theorem}[Additive Left Cancellation]\label{add-left-cancel}
