--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -19,3 +19,22 @@
 
 \theoremstyle{plain}
 \newtheorem{axiom}[theorem]{Axiom}
+
+\usepackage{hyperref}
+\hypersetup{colorlinks,linkcolor={blue},citecolor={blue},urlcolor={red}}
+
+\newcommand*{\CC}{
+\mathbb{C}
+}
+\newcommand*{\RR}{
+\mathbb{R}
+}
+\newcommand*{\ZZ}{
+\mathbb{Z}
+}
+\newcommand{\QQ}{
+\mathbb{Q}
+}
+\newcommand{\NN}{
+$\mathbf{N}$
+}
